// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Card hoverable unchanged 1`] = `
<div>
  <div
    class="memori-card memori-card--hoverable"
  >
    <div
      class="memori-spin"
    >
      <div
        class="memori-card--content"
      >
        <h3
          class="memori-card--title"
        >
          lorem-ipsum
        </h3>
        <div
          class="memori-card--children"
        />
      </div>
      <div
        class="memori-spin--spinner"
      >
        <svg
          aria-hidden="true"
          class="memori-loading-icon"
          focusable="false"
          role="img"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card loading unchanged 1`] = `
<div>
  <div
    class="memori-card memori-card--loading"
  >
    <div
      class="memori-spin memori-spin--spinning"
    >
      <div
        class="memori-card--content"
      >
        <h3
          class="memori-card--title"
        >
          Card title
        </h3>
        <div
          class="memori-card--children"
        />
      </div>
      <div
        class="memori-spin--spinner"
      >
        <svg
          aria-hidden="true"
          class="memori-loading-icon"
          focusable="false"
          role="img"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card unchanged 1`] = `
<div>
  <div
    class="memori-card"
  >
    <div
      class="memori-spin"
    >
      <div
        class="memori-card--content"
      >
        <div
          class="memori-card--children"
        />
      </div>
      <div
        class="memori-spin--spinner"
      >
        <svg
          aria-hidden="true"
          class="memori-loading-icon"
          focusable="false"
          role="img"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card with children unchanged 1`] = `
<div>
  <div
    class="memori-card"
  >
    <div
      class="memori-spin"
    >
      <div
        class="memori-card--content"
      >
        <div
          class="memori-card--children"
        >
          <p>
            Ciao
          </p>
        </div>
      </div>
      <div
        class="memori-spin--spinner"
      >
        <svg
          aria-hidden="true"
          class="memori-loading-icon"
          focusable="false"
          role="img"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card with cover unchanged 1`] = `
<div>
  <div
    class="memori-card memori-card--with-cover"
  >
    <div
      class="memori-spin"
    >
      <div
        class="memori-card--cover"
      >
        <img
          alt=""
          src="#"
        />
      </div>
      <div
        class="memori-card--content"
      >
        <div
          class="memori-card--children"
        />
      </div>
      <div
        class="memori-spin--spinner"
      >
        <svg
          aria-hidden="true"
          class="memori-loading-icon"
          focusable="false"
          role="img"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card with custom CSS class unchanged 1`] = `
<div>
  <div
    class="memori-card lorem-ipsum"
  >
    <div
      class="memori-spin"
    >
      <div
        class="memori-card--content"
      >
        <div
          class="memori-card--children"
        />
      </div>
      <div
        class="memori-spin--spinner"
      >
        <svg
          aria-hidden="true"
          class="memori-loading-icon"
          focusable="false"
          role="img"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card with description unchanged 1`] = `
<div>
  <div
    class="memori-card"
  >
    <div
      class="memori-spin"
    >
      <div
        class="memori-card--content"
      >
        <p
          class="memori-card--description"
        >
          Card description
        </p>
        <div
          class="memori-card--children"
        />
      </div>
      <div
        class="memori-spin--spinner"
      >
        <svg
          aria-hidden="true"
          class="memori-loading-icon"
          focusable="false"
          role="img"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card with title unchanged 1`] = `
<div>
  <div
    class="memori-card"
  >
    <div
      class="memori-spin"
    >
      <div
        class="memori-card--content"
      >
        <h3
          class="memori-card--title"
        >
          Card title
        </h3>
        <div
          class="memori-card--children"
        />
      </div>
      <div
        class="memori-spin--spinner"
      >
        <svg
          aria-hidden="true"
          class="memori-loading-icon"
          focusable="false"
          role="img"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
